# users-modules-cephas

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE.md  ModulesList.cmake  README  UMConfig-version.cmake.in  UMConfig.cmake.in
basic_finite_elements/: AddModule.cmake  CMakeLists.txt  InstalledAddModule.cmake  UMBuildLib.cmake  log_order1
basic_finite_elements/Testing/: TAG
basic_finite_elements/atom_tests/: 2_tets_blockset_surface_force.cub  2_tets_springs.cub  2_tets_surface_force.cub  2tets_contact.cub  CMakeLists.txt  LShape.cub  LShape.h5m  Tinterface.h5m  body_force_atom_test.cpp  convective_matrix.cpp  damper_jacobian_test.cpp  elasticity_atom_test_01X.h5m  elasticity_atom_test_01X_pressure.h5m  elasticity_atom_test_body_force.h5m  elasticity_atom_test_thermal_expansion.h5m  field_approximation.cpp  fluid_presssure_cub_test.h5m  fluid_pressure_element.cpp  mesh_for_testing_elastic_jacobian.h5m  mesh_for_testing_navier_stokes_element.h5m  mesh_for_testing_surface_pressure_element.h5m  neumann_forces.cpp  nonlinear_elastic.cpp  nonlinear_elastic_test_jacobian.cpp  second_sphere.cub  sphere.cub  sphere.h5m  sphere.jou  test_jacobian_of_ale_simple_contact_element.cpp  test_jacobian_of_simple_contact_element.cpp  test_simple_contact.cpp  testing_jacobian_of_hook_element.cpp  testing_jacobian_of_hook_scaled_with_density_element.cpp  testing_jacobian_of_navier_stokes_element.cpp  testing_jacobian_of_navier_stokes_element_with_prisms.cpp  testing_jacobian_of_surface_pressure.cpp  testing_jacobian_of_surface_pressure_element.cpp  thermal_elem.cpp  thermal_elem_unsteady.cpp  thermal_stress_elem.cpp  (+1 more)
basic_finite_elements/basic/: .petscrc  CMakeLists.txt  basic_approx.cpp  basic_contact.cpp  basic_elastic.cpp  basic_elasticity.cpp  basic_helmholtz.cpp  basic_moment_of_inertia.cpp  basic_plastic.cpp  basic_poisson.cpp  basic_radiation.cpp  cube.h5m  mian_snippet.cpp  second_moment_of_inertia.cpp
basic_finite_elements/chemo_mech/: CMakeLists.txt  elec_phys_2D.cpp  elec_pys_new.cpp  electro_physio.cpp  mixed_reac_diff.cpp  std_reac_diff.cpp  unsatu2dFlow_prob.cpp  unsaturate_flow.cpp
basic_finite_elements/cohesive_interface/: .petscrc  CMakeLists.txt  PeelTest.cub  PeelTest.h5m  PeelTest.jou  PeelTestHalfCrack.cub  PeelTestHalfCrack.h5m  PeelTestHalfCrack.jou  README  arc_length_interface.cpp
basic_finite_elements/elasticity/: .petscrc  CMakeLists.txt  LShape.cub  LShape.h5m  LShape.jou  LShape2Parts.h5m  LShape2PartsDirich.h5m  LShapeRot.cub  LShape_dBC.cub  README  cantilever_elasticity.cfg  elasticity.cpp  free_beam.cub  free_beam.h5m  sal_beam_mesh.med  simple_rod_beam.cub  simple_rod_beam.h5m  simple_rod_beam.jou  spring_LShape.cub  spring_LShape.h5m  spring_LShape.jou  spring_LShape_salome.cfg  spring_LShape_salome.h5m  spring_LShape_salome.med  test_for_springs_normal.cub  test_for_springs_tangent.cub
basic_finite_elements/elasticity_mf_springs/: CMakeLists.txt  README  bar.jou  bar_springs.cub  bar_springs.jou  elasticity_mf_springs.cpp  out.h5m  spring_cube.jou
basic_finite_elements/elasticity_mixed_formulation/: .petscrc  CMakeLists.txt  LShape.cub  LShape.h5m  LShape.jou  README  elasticity_mixed_formulation.cpp  meshbrick.jou
basic_finite_elements/hello_world/: CMakeLists.txt  README  hello_world.cpp
basic_finite_elements/hierarchical_approximation/: CMakeLists.txt
basic_finite_elements/lessons/: CMakeLists.txt  lesson1_moment_of_inertia.cpp  lesson2_approximaton.cpp  lesson3_poisson.cpp  lesson4_elastic.cpp  lesson5_helmholtz.cpp  lesson6_radiation.cpp  lesson7_plastic.cpp  lesson8_contact.cpp  mian_snippet.cpp
basic_finite_elements/level_set/: level_set.cpp
basic_finite_elements/magnetostatic/: .petscrc  CMakeLists.txt  README  lorentz_force.cpp  magnetostatic.cpp
basic_finite_elements/mix_transport/: .petscrc  CMakeLists.txt  README  h_adaptive_transport.cpp  l-shape.geo  paper.cfg  run_uf.sh  unsaturated_transport.cpp  upward_infiltration.cub
basic_finite_elements/mixed_chemo_mechanics/: CMakeLists.txt  README  bc.cfg  l-shape.msh  mixed_h_adaptive_transport.cpp  mixed_unsaturated_transport.cpp  run_uf.sh  unsaturated.cfg
basic_finite_elements/multimaterial_dynamics/: CMakeLists.txt  README  multimaterial_dynamics.cpp
basic_finite_elements/navier_stokes/: CMakeLists.txt  Tube.cub  add_prisms_layer.cpp  bc.cfg  navier_stokes.cpp  navier_stokes_prisms.cpp  navier_stokes_prisms_old.cpp  reynolds.cpp  stokes.cpp  test_jac_navier_stokes_elem.cpp
basic_finite_elements/nonlinear_elastic_materials/: README
basic_finite_elements/nonlinear_elasticity/: .petscrc  CMakeLists.txt  LShape.cub  LShape.h5m  LShape.jou  README  arc_length_nonlinear_elasticity.cpp  arc_length_nonlinear_elasticity.sh.in  dam_example.ipynb  dam_example.md  data.txt  do_vtk.sh.in  dome_stability.cub  dome_stability.h5m  dome_stability.jou  dome_thin_symm.cub  dome_thin_symm.h5m  dome_thin_symm.jou  nonlinear_dynamics.cpp  rod.cub  rod.h5m  rod.jou  spring_LShape.jou  stability.cpp
basic_finite_elements/poisson/: .petscrc  CMakeLists.txt  README  analytical_nonlinear_poisson_adolc.cpp  analytical_poisson.cpp  analytical_poisson_field_split.cpp  cube.cub  cube_2part.h5m
basic_finite_elements/reaction_diffusion_equation/: CMakeLists.txt  ElasticElement.hpp  README  editable.cpp  mesh.cub  mesh.jou  mesh_quad_2part.h5m  param_file.petsc  reac_diff_mixed.cpp  reaction_diffusion_equation.cpp  source.cpp
basic_finite_elements/simple_contact/: CMakeLists.txt  README  (+14 more)
tools/: CMakeLists.txt  add_meshsets.cpp  apply_pressure_on_bore.cpp  arbitrary_smooth_contact_surface.cpp  change_format_of_stress.cpp  convert.py  delete_ho_nodes.cpp  evaluate_eigen_stresses.cpp  extrude_prisms.cpp  field_to_vertices.cpp  fix_file.cpp  ga_optim.cpp  get_skin.cpp  make_mesh_png.py  mesh_cut.cpp  mesh_deforming.cpp  mesh_smoothing.cpp  meshset_to_vtk.cpp  mofem_part.cpp  read_med.cpp  reduce_med_field_comp.cpp  remove_mofem_meshsets.cpp  resolve_douplicated_entities.cpp  split_sideset.cpp  uniform_mesh_refinement.cpp
tutorials/: CMakeLists.txt  InstalledAddModule.cmake
(+807 files in other folders)
