# MoFEM is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the
# Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# MoFEM is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with MoFEM. If not, see <http://www.gnu.org/licenses/>

add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/atom_tests)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/elasticity)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/simple_elasticity)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/nonlinear_elasticity)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/mix_transport)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/thermal)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/cohesive_interface)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/magnetostatic)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/poisson)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/hello_world)
add_subdirectory(${PROJECT_SOURCE_DIR}/basic_finite_elements/hierarchical_approximation)